Fixed stuff Niels pointed out
